force-app/main/default/objects/Human__c/Human__c.object-meta.xml
<CustomObject>
    <label>Human</label>
    <nameField>
        <displayFormat>H-{000}</displayFormat>
        <label>Human Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Human</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>