force-app/main/default/objects/Human__c/fields/Age_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Age_Maximum__c</fullName>
    <label>Age Maximum</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>