force-app/main/default/objects/Human__c/fields/Age_Maximum_minimum__c.field-meta.xml
<CustomField>
    <fullName>Age_Maximum_minimum__c</fullName>
    <label>Age(Maximum-minimum)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>