force-app/main/default/objects/Human__c/fields/Age_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Age_Minimum__c</fullName>
    <label>Age Minimum</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>