force-app/main/default/objects/Human__c/fields/biohazards_are_associated_Biological__c.field-meta.xml
<CustomField>
    <fullName>biohazards_are_associated_Biological__c</fullName>
    <description>What biohazards are associated with the experiments and what safety precautions are required?</description>
    <inlineHelpText>Biological What biohazards are associated with the experiments and what safety precautions are required?</inlineHelpText>
    <label>biohazards are associated Biological</label>
    <length>255</length>
    <type>Text</type>
</CustomField>