force-app/main/default/objects/Human__c/fields/Biohazards_SafetyPrecaution__c.field-meta.xml
<CustomField>
    <fullName>Biohazards_SafetyPrecaution__c</fullName>
    <inlineHelpText>What Biohazards are associated with experiment &amp; What Safety Precaution required</inlineHelpText>
    <label>Human Biohazards &amp; Safety Precaution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>