force-app/main/default/objects/Human__c/fields/Biological_samples_nature_of_experimnt__c.field-meta.xml
<CustomField>
    <fullName>Biological_samples_nature_of_experimnt__c</fullName>
    <inlineHelpText>Provide details of source of biological samples and nature of experiments</inlineHelpText>
    <label>Biological samples, nature of experimnt</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>