force-app/main/default/objects/Human__c/fields/Details_of_source_of_personal_data__c.field-meta.xml
<CustomField>
    <fullName>Details_of_source_of_personal_data__c</fullName>
    <inlineHelpText>Provide details of sources of personal data, methods of data collection &amp; nature of experiments.</inlineHelpText>
    <label>Details of source of personal data</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>