force-app/main/default/objects/Human__c/fields/Details_of_stem_Cell_experiment_nature__c.field-meta.xml
<CustomField>
    <fullName>Details_of_stem_Cell_experiment_nature__c</fullName>
    <inlineHelpText>Provide details of source of stem cells and nature of experiments</inlineHelpText>
    <label>Details of stem Cell &amp; experiment nature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>