force-app/main/default/objects/Human__c/fields/Eligibility_criteria__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_criteria__c</fullName>
    <label>Eligibility criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>