force-app/main/default/objects/Human__c/fields/HumaRegulatory_bodies_for_ethical_review__c.field-meta.xml
<CustomField>
    <fullName>HumaRegulatory_bodies_for_ethical_review__c</fullName>
    <inlineHelpText>List the human participant regulatory bodies responsible for ethical review of the project and indicate the expected timeline. Any additional regulatory approval obtained or anticipated may be listed.</inlineHelpText>
    <label>Human Regulatory bodies ethical review</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>