force-app/main/default/objects/Human__c/fields/Measure_taken_to_protect_privacy_rights__c.field-meta.xml
<CustomField>
    <fullName>Measure_taken_to_protect_privacy_rights__c</fullName>
    <label>Measure taken to protect privacy,rights</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>