force-app/main/default/objects/Human__c/fields/My_Project_Involve__c.field-meta.xml
<CustomField>
    <fullName>My_Project_Involve__c</fullName>
    <label>My Project Involve</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Human Participants</fullName>
            </value>
            <value>
                <fullName>Personal data</fullName>
            </value>
            <value>
                <fullName>Experiments with human stem cells</fullName>
            </value>
            <value>
                <fullName>Biological Samples</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>