force-app/main/default/objects/Human__c/fields/Name_Address_of_Hospital_clinical__c.field-meta.xml
<CustomField>
    <fullName>Name_Address_of_Hospital_clinical__c</fullName>
    <label>Name, Add of hospital,clinical facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>