force-app/main/default/objects/Human__c/fields/PersonalRegulatorybodiesethicalreview__c.field-meta.xml
<CustomField>
    <fullName>PersonalRegulatorybodiesethicalreview__c</fullName>
    <inlineHelpText>Personal List the regulatory bodies responsible for ethical review of the project and indicate the expected timeline. Any additional regulatory approval obtained or anticipated may be listed.*</inlineHelpText>
    <label>Personal Regulatry bodies ethical review</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>