force-app/main/default/objects/Human__c/fields/Project_will_any_hospital_clinical_facil__c.field-meta.xml
<CustomField>
    <fullName>Project_will_any_hospital_clinical_facil__c</fullName>
    <label>Any hospital/clinical facility be used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I propose to use facilities within a hospital/clinic.</fullName>
            </value>
            <value>
                <fullName>My research does not require hospital/clinic facility.</fullName>
            </value>
            <value>
                <fullName>My research involves patients being cared for by a hospital/clinical facility.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>