force-app/main/default/objects/Human__c/fields/Regulatory_bodies_for_ethical_review__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_bodies_for_ethical_review__c</fullName>
    <inlineHelpText>Identify the regulatory bodies responsible for ethical review, indicate the expected timeline, and confirm whether the host institution has the required regulatory committees in place. List any additional regulatory approvals obtained or anticipated.</inlineHelpText>
    <label>Regulatory bodies for ethical review</label>
    <type>TextArea</type>
</CustomField>