force-app/main/default/objects/Human__c/fields/regulatory_bodies_human_stem_cells__c.field-meta.xml
<CustomField>
    <fullName>regulatory_bodies_human_stem_cells__c</fullName>
    <inlineHelpText>Identify the regulatory bodies responsible for ethical review, indicate the expected timeline, and confirm whether the host institution has the requisite regulatory committees in place. List any additional regulatory approvals obtained or anticipated</inlineHelpText>
    <label>regulatory bodies human stem cells</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>