force-app/main/default/objects/Human__c/fields/Regulatory_Bodies_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Bodies_Responsible__c</fullName>
    <inlineHelpText>List the bio regulatory bodies responsible for ethical review of the project and indicate the expected timeline. Any additional regulatory approval obtained or anticipated may be listed</inlineHelpText>
    <label>Bio Regulatory Bodies Responsible</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>