force-app/main/default/objects/Human__c/fields/Require_Consent_from_study_population__c.field-meta.xml
<CustomField>
    <fullName>Require_Consent_from_study_population__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does your Proposal Require Informed consent from study population</inlineHelpText>
    <label>Require Consent from study population</label>
    <type>Checkbox</type>
</CustomField>