force-app/main/default/objects/Human__c/fields/Retention_and_retention_plan__c.field-meta.xml
<CustomField>
    <fullName>Retention_and_retention_plan__c</fullName>
    <label>Retention and retention plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>