force-app/main/default/objects/Human__c/fields/Size_cal_including_statiscal_analysis__c.field-meta.xml
<CustomField>
    <fullName>Size_cal_including_statiscal_analysis__c</fullName>
    <inlineHelpText>Sample size calculation, including statistical analysis</inlineHelpText>
    <label>Size cal, including statiscal analysis</label>
    <length>250</length>
    <type>Text</type>
</CustomField>