force-app/main/default/objects/Human__c/fields/Study_Population_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Study_Population_Characteristics__c</fullName>
    <label>Study Population Characteristics</label>
    <length>250</length>
    <type>Text</type>
</CustomField>