force-app/main/default/objects/Human__c/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <label>Timeline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>