force-app/main/default/objects/Human__c/fields/What_is_Protocol_for_waste_management__c.field-meta.xml
<CustomField>
    <fullName>What_is_Protocol_for_waste_management__c</fullName>
    <label>What is Protocol for waste management</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>