force-app/main/default/objects/Human__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Proposal__c</columns>
    <columns>Age_Minimum__c</columns>
    <columns>My_Project_Involve__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>